frontend/test/should_pass/to_002.grg
using test_model_002;

rule to_1 {
	a : A;
	b : typeof(a);

	replace{
		a --> b;
		c : typeof(a);
		d : typeof(b);
	}
}
